# EvalMono3D

./: DATA.md  README.md  datasets.py  eval.py  logperf.py  omni3d_evaluation.py  pyproject.toml  requirements.txt
evalmono3d/: __init__.py  cli.py  cocoeval.py  dataset.py  evaluator.py  iou3d.py  report.py
example/: cdrone_test_example.json  cdrone_test_example_pred.pth
scripts/: visualize.py
tests/: test_reproducibility.py
